<resources>
    <string name="app_name">RiKWO</string>
    <string name="textViewHomePermissionsTitle">Informacje o uprawnieniach</string>
    <string name="textViewHomePermissionsAboutCallLogAccess">Dostęp do rejestru połączeń</string>
    <string name="textViewHomePermissionsAboutSmsAccess">Dostęp do wiadomości sms</string>
    <string name="textViewHomePermissionsAboutDefaultSmsApp">Aplikacja domyślna dla wiadomości sms</string>
    <string name="textViewHomePermissionsAboutBackupLocation">Dostęp do lokalizacji kopii zapasowych</string>
    <string name="buttonHomePermissionsDetails">Więcej szczegółów</string>
    <string name="textViewHomeLastBackupTitle">Ostatnia kopia zapasowa</string>
    <string name="textViewHomeLastBackupLocalizationAbout">Nie wybrano lokalizacji dla kopii zapasowych</string>
    <string name="textViewHomeLastSmsBackupAbout">Brak kopii zapasowych dla wiadomości sms</string>
    <string name="textViewHomeLastCallLogBackupAbout">Brak kopii zapasowych dla rejestru połączeń</string>
    <string name="buttonHomeRestoreBackupNow">Przywróć kopię zapasową</string>
    <string name="textViewSmsAbout">Informacje o wiadomościach sms</string>
    <string name="textViewSmsCount">Nie posiadasz żadnych wiadomości sms</string>
    <string name="switchBackupSmsLabel">Uwzględnij wiadomości w kopii zapasowej</string>
    <string name="textViewCallLogAbout">Informacje o rejestrze połączeń</string>
    <string name="textViewCallLogCount">Nie posiadasz żadnych wpisów w rejestrze połączeń</string>
    <string name="switchBackupCallLogLabel">Uwzględnij rejestr w kopii zapasowej</string>
    <string name="buttonBackup">Wykonaj kopię zapasową teraz</string>
    <string name="textViewPhoneLocalizationTitle">Lokalnie w pamięci telefonu</string>
    <string name="textViewCurrentlyChoosedLocalDirectory">Nie wskazano lokalizacji dla kopii zapasowej</string>
    <string name="switchBackupLocalizationLocal">Przechowuj kopie zapasową lokalnie</string>
    <string name="buttonChooseBackupLocalDirectory">Wybierz katalog</string>
    <string name="textViewLocalizationTitle">Wybierz lokalizację kopii zapasowej</string>
    <string name="textViewCurrentLocalization">Nie wybrano lokalizacji</string>
    <string name="textViewProviderTitle">Wybierz usługodawcę</string>
    <string name="textViewCurrentProvider">Nie wybrano usługodawcy</string>
    <string name="textViewFreqTitle">Wybierz częstotliwość wykonywania kopii</string>
    <string name="textViewCurrentFreq">Nie wybrano częstotliwości</string>
    <string name="textViewRestoreChooseFilesTitle">Co chciałbyś przywrócić?</string>
    <string name="switchRestoreIncludeSmsFile">Wiadomości sms</string>
    <string name="textViewRestoreSmsFileAbout">Nie wskazałeś jeszcze pliku zawierającego kopię zapasową wiadomości sms</string>
    <string name="buttonRestoreChooseOtherSmsFile">Wskaż kopię wiadomości</string>
    <string name="switchRestoreIncludeCallLogFile">Rejestr połączeń</string>
    <string name="textViewRestoreCallLogFileAbout">Nie wskazałeś jeszcze pliku zawierającego kopię zapasową rejestru połączeń</string>
    <string name="buttonRestoreChooseOtherCallLogFile">Wskaż kopię rejestru</string>
    <string name="textViewRestoreBeginTitle">Czy kontynuować?</string>
    <string name="textViewRestoreBeginWarning">Rozpoczęcie przywracania danych ze wskazanych kopii zapasowych spowoduje nieodwracalne zastąpienie obecnie istniejących danych."</string>
    <string name="textViewRestoreBeginAbout">Aby kontynuować przywracanie wskazanych danych, kliknij na przycisku rozpocznij przywracanie.</string>
    <string name="buttonRestoreBegin">Rozpocznij przywracanie</string>
    <string name="textViewPrivacyTitle">Polityka prywatności</string>
    <string name="textViewPrivacyAbout">Twoja prywatność jest dla nas bardzo ważna. Niniejsza Polityka prywatności dotyczy korzystania z naszej aplikacji mobilnej na platformie Android. Przeczytaj uważnie naszą Politykę prywatności i daj nam znać, jeśli masz jakiekolwiek pytania.</string>
    <string name="textViewWhatInformationDoWeCollectTitle">Jakie informacje zbieramy</string>
    <string name="textViewWhatInformationDoWeCollectPersonalInformationSubTitle">Informacje osobiste</string>
    <string name="textViewWhatInformationDoWeCollectPersonalInformationAbout">NIE gromadzimy, nie udostępniamy, nie sprzedajemy, nie wysyłamy, nie przechowujemy ani nie wykorzystujemy żadnych danych osobowych podczas pobierania lub uaktualniania naszej aplikacji.</string>
    <string name="textViewWhatInformationDoWeCollectNonPersonalInformationSubTitle">Informacje nieosobowe</string>
    <string name="textViewWhatInformationDoWeCollectNonPersonalInformationAboutP1">Informacje nieosobowe to informacje, które nie mogą dotyczyć konkretnej osoby, takie jak typ urządzenia, producent urządzenia, wersja systemu operacyjnego, częstotliwość korzystania z aplikacji, itp.</string>
    <string name="textViewWhatInformationDoWeCollectNonPersonalInformationAboutP2">Nie gromadzimy żadnych danych nieosobowych.</string>
    <string name="textViewWhatInformationDoWeCollectNonPersonalInformationAboutP3">Jeśli dane nieosobowe zostaną połączone z danymi osobowymi, informacje te będą traktowane jako dane osobowe.</string>
    <string name="textViewHowWeUseYourDataTitle">Jak wykorzystujemy Twoje dane</string>
    <string name="textViewHowWeUseYourDataPersonalInformationSubTitle">Informacje osobiste</string>
    <string name="textViewHowWeUseYourDataPersonalInformationAbout">Ponieważ nie gromadzimy Danych Osobowych, nie możemy w żaden sposób wykorzystywać Twoich Danych Osobowych.</string>
    <string name="textViewHowWeUseYourDataNonPersonalInformationSubTitle">Informacje nieosobowe</string>
    <string name="textViewHowWeUseYourDataNonPersonalInformationAbout">Ponieważ nie gromadzimy Danych Nieosobowych, nie możemy w żaden sposób wykorzystywać Twoich Danych Nieosobowych.</string>
    <string name="textViewHowYourDataCanBeDisclosedTitle">W jaki sposób Twoje dane mogą zostać ujawnione</string>
    <string name="textViewHowYourDataCanBeDisclosedPersonalInformationSubTitle">Informacje osobiste</string>
    <string name="textViewHowYourDataCanBeDisclosedPersonalInformationAbout">Nie przechowujemy Danych Osobowych i dlatego nie ujawniamy Twoich Danych Osobowych.</string>
    <string name="textViewHowYourDataCanBeDisclosedNonPersonalInformationSubTitle">Informacje nieosobowe</string>
    <string name="textViewHowYourDataCanBeDisclosedNonPersonalInformationAbout">Nie przechowujemy Danych Nieosobowych i dlatego nie ujawniamy Twoich Danych Nieosobowych. Nie łączymy Danych Nieosobowych z Danymi Osobowymi.</string>
    <string name="textViewThirdPartyServicesTitle">Usługi stron trzecich</string>
    <string name="textViewThirdPartyServicesAbout">Nasza aplikacja nie wykorzystuje usług stron trzecich. Żadne z danych, które przetwarzasz przy użyciu naszej aplikacji nie są udostępniane stronom trzecim.</string>
    <string name="textViewSecurityTitle">Bezpieczeństwo</string>
    <string name="textViewSecurityAbout">Nie zbieramy danych osobowych.</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataTitle">Uprawnienia urządzenia do dostępu do danych osobowych</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataAboutP1">W zależności od konkretnego urządzenia użytkownika, ta Aplikacja może zażądać pewnych uprawnień, które pozwolą jej uzyskać dostęp do danych urządzenia użytkownika, jak opisano poniżej.</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataAboutP2">Domyślnie uprawnienia te muszą zostać udzielone przez użytkownika, zanim będzie można uzyskać dostęp do odpowiednich informacji. Udzielone uprawnienie może zostać w każdej chwili cofnięte przez użytkownika. Aby cofnąć te uprawnienia, użytkownicy mogą odwołać się do ustawień urządzenia lub skontaktować się z właścicielem w celu uzyskania pomocy pod danymi kontaktowymi podanymi w niniejszym dokumencie. Dokładna procedura kontrolowania uprawnień aplikacji może zależeć od urządzenia i oprogramowania użytkownika.</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataAboutP3">Należy pamiętać, że cofnięcie takich uprawnień może wpłynąć na prawidłowe działanie tej Aplikacji. Jeśli użytkownik udzieli któregokolwiek z uprawnień wymienionych poniżej, odpowiednie dane osobowe mogą być przetwarzane (tj. dostępne, modyfikowane lub usuwane) przez tę Aplikację.</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataSmsSubTitle">Dostęp do wiadomości sms</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataSmsAbout">Służy do uzyskiwania dostępu do wiadomości SMS w celu zapisania ich lokalnie na urządzeniu użytkownika.</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataCallLogSubTitle">Dostęp do rejestru połączeń</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataCallLogAbout">Służy do uzyskiwania dostępu do rejestru połączeń w celu zapisania jego zawartości lokalnie na urządzeniu użytkownika.</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataMemorySubTitle">Dostęp do pamięci wewnętrznej</string>
    <string name="textViewDevicePermissionsToAccessPersonalDataMemoryAbout">Służy do odczytywania i tworzenia plików w folderze wskazanym przez użytkownika w pamięci wewnętrznej urządzenia.</string>
    <string name="textViewSensitiveInformationTitle">Informacje wrażliwe</string>
    <string name="textViewSensitiveInformationAbout">Prosimy o nieprzesyłanie i nieujawnianie żadnych wrażliwych Danych Osobowych (np. informacji związanych z pochodzeniem rasowym lub etnicznym, poglądami politycznymi, religią lub innymi przekonaniami, stanem zdrowia, orientacją seksualną, przeszłością kryminalną lub członkostwem w organizacjach, w tym członkostwo w związkach zawodowych) za pośrednictwem usług firm trzecich lub w inny sposób do nas.</string>
    <string name="textViewAboutTitle">RiKWO</string>
    <string name="iconViewContentDescription">RiKWO Application Logo</string>
    <string name="textViewAboutAppTitle">O aplikacji</string>
    <string name="textViewAboutAppInfo">Aplikacja mobilna służąca do wykonywania i przywracania kopii zapasowych rejestru połączeń i wiadomości sms na platformę Android."</string>
    <string name="textViewAboutTeamTitle">Skład zespołu</string>
    <string name="textViewAboutTeamInfo">• Dariusz Świąder\n• Filip Kieś\n• Hubert Kowalczyk</string>
    <string name="textViewAboutProjectTitle">O projekcie</string>
    <string name="textViewAboutProjectInfo">Aplikacja ta została zrealizowana w ramach projektu Repozytoria i Kontrola Wersji Oprogramowania. Celem projektu było nabycie podstawowych umiejętności z zakresu  współtworzenia kodu, oraz obsługi narzędzi wspomagających pracę w zespole.</string>
    <string name="textViewPermissionsSmsGroupTitle">Dostęp do wiadomości sms</string>
    <string name="textViewPermissionsSmsGroupAbout">Ta grupa uprawnień jest wymagana w celach związanych z kopiami zapasowymi wiadomości sms.</string>
    <string name="switchPermissionsSmsRead">Odczyt sms</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="homeFragmentTitle">Strona główna</string>
    <string name="backupFragmentTitle">Wykonaj kopię zapasową</string>
    <string name="restoreFragmentTitle">Przywróć kopię zapasową</string>
    <string name="logsFragmentTitle">Logi</string>
    <string name="itemsGroupSettingsTitle">Ustawienia</string>
    <string name="permissionsFragmentTitle">Uprawnienia</string>
    <string name="localizationFragmentTitle">Lokalizacja kopii zapasowej</string>
    <string name="encryptionFragmentTitle">Szyfrownie</string>
    <string name="itemsGroupOthersTitle">Pozostałe</string>
    <string name="privacyFragmentTitle">Polityka prywatności</string>
    <string name="aboutFragmentTitle">O RiKWO</string>
</resources>